<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AddEditEntryTitle"
        android:paddingTop="10dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_hint"
        android:paddingTop="10dp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/addDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/station_hint"
        android:paddingTop="10dp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/addStation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/odometer_hint"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/addOdometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grade_hint"
        android:paddingTop="10dp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/addGrade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount_hint"
        android:paddingTop="10dp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/addAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unit_cost_hint"
        android:paddingTop="10dp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/addUnitCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/submit"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />


        <Button
            android:id="@+id/cancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

</LinearLayout>
